@@ -354,7 +354,7 @@ if (!$gallery->album->isMovie($id)) {
 
 	if(sizeof($albumItemOptions) < 3) {
 		if ($gallery->album->fields["use_exif"] == "yes" &&
-		    (eregi("jpe?g\$", $photo->image->type)) &&
+		    (preg_match('/jpe?g\$/i', $photo->image->type)) &&
 		    (isset($gallery->app->use_exif) || isset($gallery->app->exiftags)))
 		{
 			$albumName = $gallery->session->albumName;
