@@ -1,6 +1,10 @@
+2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b7
+
+* Fix: Album- and Photoview works now also again (when not logged in).
+
 2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b6
 
-* Fix: Frontpage now completely works again.
+* Fix: Frontpage now works again (when not logged in).
 
 2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b5
 
